# Rational-Fracta-Interpolation

./: .gitignore  README.md
cmodel/: CMakeLists.txt  demo.cpp  main.cpp
cmodel/inc/: core.h  imgproc.h  levelset.h  myalgorithm.h  upsampling.h
cmodel/src/: core.cpp  imgproc.cpp  levelset.cpp  upsampling.cpp
